--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "mongodb": "^6.8.0",
