--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,20 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.51.11",
-    "@trpc/client": "^10.45.2",
-    "@trpc/server": "^10.45.2",
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1",
     "next": "14.2.4",
     "proxy-chain": "^2.5.1",
-    "puppeteer": "^22.12.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
