--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm-run-all --parallel dev:*",
-    "dev:frontend": "cd apps/web && npm run dev",
-    "dev:backend": "cd apps/server && npm run start:dev"
+    "dev": "pnpm run --parallel dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "workspaces": [
-    "apps/*"
-  ],
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   }
