--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,7 +12,8 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@server/*": ["./apps/server/src/*"],
-      "@web/*": ["./apps/web/src/*"]
+      "@web/*": ["./apps/web/src/*"],
+      "@public/*": ["./apps/web/public/*"]
     }
   }
 }
