--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.5",
     "@mui/x-charts": "^7.11.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "proxy-chain": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
